# smooth-scroll

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  scroll_engine.rs
src-tauri/src/scroll/: engine.rs  ffi.rs  mod.rs  physics.rs  state.rs
