[package]
name = "smooth-scroll"
version = "0.1.0"
description = "Fluid scrolling for your mouse on macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "smooth_scroll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-autostart = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

